<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_COM" Id="{7c8ef01c-139d-4a9c-a18a-777693166eb4}">
    <Declaration><![CDATA[VAR_GLOBAL
	// Define COM Ports/Buffers incl. library Tc2_SerialCom
	SerialRXBuffer : ComBuffer;
	SerialTXBuffer : ComBuffer;
	
	// Serial Terminal
	fbSerialLineControl: SerialLineControl;

	//SERIAL IO
	{attribute	'TcLinkTo'	:=	'.Status:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Status;
								 .D[0]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 0;
								 .D[1]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 1;
								 .D[2]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 2;
								 .D[3]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 3;
								 .D[4]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 4;
								 .D[5]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 5;
								 .D[6]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 6;
								 .D[7]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 7;
								 .D[8]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 8;
								 .D[9]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 9;
								 .D[10]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 10;
								 .D[11]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 11;
								 .D[12]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 12;
								 .D[13]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 13;
								 .D[14]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 14;
								 .D[15]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 15;
								 .D[16]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 16;
								 .D[17]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 17;
								 .D[18]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 18;
								 .D[19]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 19;
								 .D[20]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 20;
								 .D[21]:=TIIB[EL6002]^COM TxPDO-Map Inputs Channel 2^Data In 21;
	'}
	stComIn		AT %I*	:	EL6inData22B;
		{attribute	'TcLinkTo'	:=	'.Ctrl:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Ctrl;
								 .D[0]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 0;
								 .D[1]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 1;
								 .D[2]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 2;
								 .D[3]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 3;
								 .D[4]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 4;
								 .D[5]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 5;
								 .D[6]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 6;
								 .D[7]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 7;
								 .D[8]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 8;
								 .D[9]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 9;
								 .D[10]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 10;
								 .D[11]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 11;
								 .D[12]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 12;
								 .D[13]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 13;
								 .D[14]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 14;
								 .D[15]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 15;
								 .D[16]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 16;
								 .D[17]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 17;
								 .D[18]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 18;
								 .D[19]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 19;
								 .D[20]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 20;
								 .D[21]:=TIIB[EL6002]^COM RxPDO-Map Outputs Channel 2^Data Out 21;
	'}
	stComOut		AT %Q*	:	EL6outData22B;
	
	
	// Define COM Ports/Buffers incl. library Tc2_SerialCom
	E2_SerialRXBuffer : ComBuffer;
	E2_SerialTXBuffer : ComBuffer;
	
	// Serial Terminal
	E2_fbSerialLineControl: SerialLineControl;

	//SERIAL IO
	{attribute	'TcLinkTo'	:=	'.Status:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Status;
								 .D[0]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 0;
								 .D[1]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 1;
								 .D[2]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 2;
								 .D[3]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 3;
								 .D[4]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 4;
								 .D[5]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 5;
								 .D[6]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 6;
								 .D[7]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 7;
								 .D[8]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 8;
								 .D[9]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 9;
								 .D[10]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 10;
								 .D[11]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 11;
								 .D[12]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 12;
								 .D[13]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 13;
								 .D[14]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 14;
								 .D[15]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 15;
								 .D[16]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 16;
								 .D[17]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 17;
								 .D[18]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 18;
								 .D[19]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 19;
								 .D[20]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 20;
								 .D[21]:=TIIB[EP6002-0002]^COM TxPDO-Map Inputs Channel 1^Data In 21;
	'}
	E2_stComIn		AT %I*	:	EL6inData22B;
	{attribute	'TcLinkTo'	:=	'.Ctrl:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Ctrl;
								 .D[0]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 0;
								 .D[1]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 1;
								 .D[2]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 2;
								 .D[3]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 3;
								 .D[4]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 4;
								 .D[5]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 5;
								 .D[6]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 6;
								 .D[7]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 7;
								 .D[8]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 8;
								 .D[9]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 9;
								 .D[10]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 10;
								 .D[11]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 11;
								 .D[12]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 12;
								 .D[13]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 13;
								 .D[14]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 14;
								 .D[15]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 15;
								 .D[16]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 16;
								 .D[17]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 17;
								 .D[18]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 18;
								 .D[19]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 19;
								 .D[20]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 20;
								 .D[21]:=TIIB[EP6002-0002]^COM RxPDO-Map Outputs Channel 1^Data Out 21;
								 '}
	E2_stComOut		AT %Q*	:	EL6outData22B;
	
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>