<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_Devices" Id="{1c4a3623-8d76-4d92-90b8-adf7493881b6}">
    <Declaration><![CDATA[VAR_GLOBAL
	
	(*TD20*)
	{attribute 'pytmc' := '
    pv: PTM:01
	'}
	PTM_01 : FB_PTM_TurboDrive; // PLC IO Interface
	PTM_01_Serial : FB_Oerlikon_TD20_COM; //Serial Interface
	
	
	(*Pfeiffer*)
	{attribute 'pytmc' := '
    pv: PTM:02
	'}
	PTM_02 : FB_PTM_Pfeiffer;
	{attribute 'pytmc' := '
    pv: PTM:03
	'}
	PTM_03 : FB_PTM_Pfeiffer;
	// They share the same serial port
	st_Pfeiffer_CTRL 			: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom : FB_PFEIFFER_COM;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>